cmake_minimum_required (VERSION 2.8.2)

project(chapparal)

# GoogleTest.
configure_file(GoogleTest.cmake third_party/googletest/CMakeLists.txt)
execute_process(COMMAND "${CMAKE_COMMAND}" -G "${CMAKE_GENERATOR}" .
  WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/third_party/googletest" )
execute_process(COMMAND "${CMAKE_COMMAND}" --build .
  WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/third_party/googletest" )
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/third_party/googletest")

# Use C++11.
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# Allow including files relative to top-level directory.
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
# Enable testing.
enable_testing()

# Subdirectories.
add_subdirectory(calc)
add_subdirectory(executer)
add_subdirectory(json)
add_subdirectory(lexer)
add_subdirectory(parser)
